# book_yuki_toyoda_rusty_book_manager

./: Cargo.toml  Dockerfile  Makefile.toml  compose.yml
.github/workflows/: ci.yaml
adapter/: Cargo.toml
adapter/data/: initial_setup.sql
adapter/migrations/: 20241117033858_start.down.sql  20241117033858_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs  model.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
adapter/src/repository/fixtures/: common.sql
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
kernel/: Cargo.toml
kernel/src/model/: entity.rs  mod.rs  value_object.rs
kernel/src/model/auth/: event.rs  mod.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/model/checkout/: event.rs  mod.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
