[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = { version = "0.7.8", features = ["macros"] }
derive-new = "0.7.0"
rstest = "0.23.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

adapter = { path = "adapter" }
api = { path = "api" }
kernel = { path = "kernel" }
shared = { path = "shared" }
registry = { path = "registry" }


[dependencies]
api = { workspace = true }
adapter = { workspace = true }
registry = { workspace = true }
shared = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }

tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
rstest = { workspace = true }
