[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = { version = "0.7.8", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
bcrypt = "0.16.0"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
derive-getters = "0.5.0"
derive-new = "0.7.0"
email_address = "0.2.9"
garde = { version = "0.20.0", features = ["derive", "email"] }
mockall = "0.13.1"
redis = { version = "0.27.5", features = ["tokio-rustls-comp"] }
rstest = "0.23.0"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate",
] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
tracing = { version = "0.1.40", features = ["log"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

adapter = { path = "adapter" }
api = { path = "api" }
kernel = { path = "kernel" }
shared = { path = "shared" }
registry = { path = "registry" }


[dependencies]
api = { workspace = true }
adapter = { workspace = true }
registry = { workspace = true }
shared = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

[dev-dependencies]
rstest = { workspace = true }
