[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { workspace = true }
shared = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
derive-new = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
kernel = { workspace = true, features = ["test-utils"] }