[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono ={ workspace = true }
derive-getters = { workspace = true }
derive-new = { workspace = true }
email_address = { workspace = true }
mockall = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
test-utils = []
